Fixing control spacing

--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ button {
     background-color: #c36d11;
 }
 
-#controls{
-    margin: 0 -20px;
+.controls{
+    margin: 0 -20px 0 -10px;
 }
 
 .control_group{
@@ -104,7 +104,7 @@ button {
 } */
 
 .control_group:last-of-type{
-    padding-right: 0;
+    /* padding-right: 0; */
 }
 
 .control_divider{
@@ -127,7 +127,7 @@ button {
     margin: 0 -15px;
     position: relative;
     z-index: 10;
-    height: 30px;
+    height: 32px;
 }
 
 .control_group_header .instrument_name{
@@ -280,7 +280,7 @@ button {
     right: 0;
     position: absolute;
     z-index: -1;
-    opacity: 0.5;
+    opacity: 0.4;
     background-size: 100%;
     border-radius: 3px;
 }
@@ -374,7 +374,7 @@ button {
     width: 10px;
     height: 10px;
     float: left;
-    margin: 3px -15px 0 5px;
+    margin: 10px -15px 0 5px;
     /* transition: box-shadow 0.5s linear; */
     box-shadow: inset 0 0 5px rgba(255, 66, 66, 0.01);
     transition: box-shadow 0.2s linear, background-color 0.2s linear;
@@ -385,7 +385,7 @@ button {
 .led:last-of-type{
     /* background-color: blue; */
     float: right;
-    margin: 3px 5px 0 -15px;
+    margin: 10px 5px 0 -15px;
 }
 
 .led.active{
